Do not try to reopen non-existing local files

BUG: 409858